# tvision

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  format.sh  hello.cpp
.github/workflows/: cmake.yml
cmake/: MiscUtils.cmake
examples/: CMakeLists.txt
examples/avscolor/: termcolor.cpp
examples/fileman/: CMakeLists.txt  fileman.cpp
examples/mmenu/: Commands.h  MultiMenu.cpp  MultiMenu.h  TestApp.cpp  commands.h  mmenu.cpp  mmenu.h  multimenu.cpp  multimenu.h  test.cpp  testapp.cpp
examples/palette/: cmds.h  palette.cpp  palette.h  test.cpp  test.h
examples/tvdemo/: Application.cpp  Application.h  application.cpp  application.h  ascii.cpp  ascii.h  backgrnd.cpp  backgrnd.h  calc.cpp  calc.h  calendar.cpp  calendar.h  demohelp.h  evntview.cpp  evntview.h  fileview.cpp  fileview.h  gadgets.cpp  gadgets.h  makefile  mousedlg.cpp  mousedlg.h  puzzle.cpp  puzzle.h  tvcmds.h  tvdemo.h  tvdemo1.cpp  tvdemo2.cpp  tvdemo3.cpp
examples/tvdir/: DirApp.cpp  app.cpp  app.h  constants.h  diroutline.cpp  diroutline.h  dirwindow.cpp  dirwindow.h  filepane.cpp  filepane.h  main.cpp  makefile  quickmessage.cpp  quickmessage.h  tvdir.cpp
examples/tvedit/: EditorApp.cpp  EditorApp.h  editorapp.cpp  editorapp.h  makefile  tvedit.h  tvedit1.cpp  tvedit2.cpp  tvedit3.cpp
examples/tvforms/: ResourceCollection.cpp  ResourceCollection.h  ResourceFile.cpp  ResourceFile.h  ResourceItem.h  datacoll.cpp  datacoll.h  fields.cpp  fields.h  formcmds.h  forms.cpp  forms.h  genform.cpp  genparts.h  genphone.h  listdlg.cpp  listdlg.h  resourcefile.cpp  resourcefile.h  tvforms.cpp
examples/tvhc/: tvhc.cpp  tvhc.h
include/: pch.h
include/tvision/: Application.h  Background.h  Button.h  ChdirDialog.h  CheckBoxes.h  Clipboard.h  Cluster.h  Collection.h  ColorCommandCodes.h  ColorDialog.h  ColorDisplay.h  ColorGroup.h  ColorGroupList.h  ColorItem.h  ColorItemList.h  ColorSelector.h  CommandCodes.h  CommandSet.h  DIalog.h  Desktop.h  Dialog.h  DirCollection.h  DirEntry.h  DirListBox.h  DrawBuffer.h  DrawSurface.h  EditCommands.h  EditWindow.h  Editor.h  Event.h  EventCodes.h  EventQueue.h  FileCollection.h  FileCommands.h  FileDialog.h  FileEditor.h  FileInfoPane.h  FileInputLine.h  FileList.h  FilterValidator.h  (+204 more)
include/tvision/internal/: ansidisp.h  base64.h  codepage.h  (+25 more)
source/: CMakeLists.txt
source/platform/: ansidisp.cpp  ansidisp.h  base64.cpp  base64.h  buffdisp.cpp  codepage.cpp  codepage.h  colors.cpp  constarr.h  constmap.h  cursor.cpp  cursor.h  dir.cpp  dispbuff.h  events.cpp  far2l.cpp  far2l.h  findfrst.cpp  getenv.h  gpminput.cpp  gpminput.h  hardware.cpp  linuxcon.cpp  linuxcon.h  ncurdisp.cpp  ncurdisp.h  ncursinp.cpp  ncursinp.h  platfcon.cpp  platform.cpp  platform.h  scrlife.cpp  scrlife.h  sighandl.cpp  sighandl.h  sigwinch.cpp  sigwinch.h  stdioctl.cpp  stdioctl.h  strings.cpp  (+14 more)
source/tvision/: Application.cpp  Background.cpp  Button.cpp  ChdirDialog.cpp  CheckBox.cpp  Clipboard.cpp  Cluster.cpp  Collection.cpp  ColorDialog.cpp  ColorDisplay.cpp  ColorSelector.cpp  CommandSet.cpp  Desktop.cpp  Dialog.cpp  DirCollection.cpp  DirListBox.cpp  DrawBuffer.cpp  DrawSurface.cpp  EditWindow.cpp  Editor.cpp  Editor1.cpp  Editor2.cpp  Event.cpp  FileCollection.cpp  FileDialog.cpp  FileEditor.cpp  FileInfoPane.cpp  FileInputLine.cpp  FileList.cpp  FilterValidator.cpp  Frame.cpp  Group.cpp  HardwareInfo.cpp  HelpFile.cpp  HelpViewer.cpp  HelpWindow.cpp  History.cpp  HistoryViewer.cpp  HistoryWindow.cpp  Indicator.cpp  (+294 more)
test/: CMakeLists.txt  test.h
test/platform/: base64.test.cpp  far2l.test.cpp  terminal.test.cpp  ttext.test.cpp
test/tvision/: tkey.test.cpp  ttimerqu.test.cpp
tools/: CMakeLists.txt
tools/tvhc/: tvhc.cpp  tvhc.h
(+9 files in other folders)
